# orthrus

./: .gitignore  AGENT_REFERENCE.md  ENVIRONMENT_FIXES.md  POSIX_COMPLIANCE_CHANGES.md  README.md  VENV_SETUP.md  handoff-export-12.md  justfile  pyproject.toml  setup_prompt.md
deploy/macos/: com.orthrus.capture.plist
docs/: AGATHOS-HERMES-INTEGRATION-ANALYSIS.md  AGATHOS-HERMES-PHASE2-ANALYSIS.md  LINUX_WSL_SUPPORT.md  POSIX_COMPLIANCE_AUDIT.md  POSIX_HUNT_SUMMARY.md  PR_CHECKLIST.md
docs/reference/_old_legacy/: __init__.py  actions.py  audit.py  circuit_breaker.py  cleanup.py  cli.py  cost_monitor.py  daemon_mgmt.py  directives.py  directives_schema.py  drift.py  entropy.py  integration.py  memory_compat.py  metrics.py  ml_data.py  notifications.py  orthrus.py  orthrus_audit.py  provider_health.py  resources.py  setup.py  subprocess_utils.py  venv_utils.py  wal_monitor.py  watcher_schema.sql
docs/reference/agathos/: __init__.py  actions.py  agathos.py  argus_audit.py  circuit_breaker.py  cleanup.py  cli.py  daemon_mgmt.py  directives_schema.py  drift.py  entropy.py  hermes_fallback.py  metrics.py  ml_data.py  notifications.py  provider_health.py  resources.py  subprocess_utils.py  wal_monitor.py
spec/: INDEX.md  README.md
spec/01-requirements/: README.md
spec/02-architecture/: ML_DATA_CAPTURE_ARCHITECTURE.md  decision-log.md
spec/02-architecture/modules/: README.md
spec/02-architecture/modules/capture/: README.md
spec/02-architecture/modules/cli/: README.md
spec/02-architecture/modules/config/: README.md
spec/02-architecture/modules/embedding/: README.md
spec/02-architecture/modules/export/: README.md
spec/02-architecture/modules/search/: README.md
spec/02-architecture/modules/storage/: README.md
spec/02-architecture/modules/sync/: README.md
spec/03-research/: README.md  TEMPLATE.md
spec/03-research/dataclass-durability/: README.md
spec/03-research/embedding-models/: README.md
spec/04-apis/: cli-spec.md  config-schema.md  python-api.md
spec/05-data-formats/: TURN_DATACLASS_DEEP_ANALYSIS.md  turn-schema.md
spec/06-testing/: test-strategy.md
spec/07-deployment/: deployment.md
src/agathos/: agathos.py  audit.py  cost_monitor.py  directives.py  entropy.py  integration.py  memory_compat.py  notifications.py  resources.py  setup.py  venv_utils.py  wal_monitor.py
src/orthrus/: __init__.py  cli.py  integration.py  orthrus_audit.py  setup.py
src/orthrus/capture/: __init__.py  _manager.py  _queue.py  _uuid7.py  _worker.py  turn.py  turn_data.py
src/orthrus/cli/: __init__.py  _console.py
src/orthrus/cli/commands/: __init__.py  capture.py  config.py  export.py  search.py  sync.py  util.py
src/orthrus/config/: __init__.py  _models.py  _paths.py
src/orthrus/embedding/: __init__.py  _mlx.py  _onnx.py  _protocol.py  _transformers.py  _worker.py
src/orthrus/export/: __init__.py  _config.py  _exporter.py  _result.py
src/orthrus/export/_formats/: __init__.py  _base.py  _dpo.py  _raw.py  _sharegpt.py
src/orthrus/search/: __init__.py  _manager.py  _text.py  _vector.py
src/orthrus/storage/: __init__.py  _jsonl.py  _manager.py  _manifest.py  _parquet.py  _paths.py  _rotation.py
src/orthrus/sync/: __init__.py  _manager.py  _models.py
src/orthrus/sync/targets/: __init__.py  _base.py  _local.py  _rsync.py  _s3.py
tests/: POSIX_TESTS_README.md  run_posix_compliance_check.py  test_environment_portability.py  test_posix_compliance.py
tests/capture/: __init__.py  conftest.py  test_capture_manager.py  test_turn.py  test_uuid7.py
tests/config/: __init__.py  test_config.py
tests/embedding/: __init__.py  test_mlx.py  test_onnx.py  test_transformers.py  test_worker.py
tests/export/: __init__.py  test_config.py  test_exporter.py  test_formatters.py  test_result.py
tests/search/: __init__.py  conftest.py  test_manager.py  test_text.py  test_vector.py
tests/storage/: __init__.py  conftest.py  test_jsonl.py  test_manager.py  test_manifest.py  test_parquet.py  test_paths.py  test_rotation.py
tests/sync/: __init__.py  test_manager.py  test_models.py  test_targets.py
