[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agathos"
version = "0.1.0"
description = "Agathos — Agent Guardian & Health Oversight System for Hermes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "zestehl"},
]
keywords = ["hermes", "agent", "monitoring", "entropy", "guardian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "hermes-agent",  # Core dependency
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
agathos = "agathos.cli:main"
agathos-setup = "agathos.setup:main"
agathos-audit = "agathos.argus_audit:main"

[project.entry-points."hermes.plugins"]
agathos = "agathos.integration:HermesPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/agathos"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
