[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agathos"
version = "0.1.0"
description = "Agathos — Agent Guardian & Health Oversight System for Hermes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "zestehl"},
]
keywords = ["hermes", "agent", "monitoring", "entropy", "guardian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pyyaml>=6.0",
]

# Hermes agent is provided by the host environment or installed separately
# See: https://github.com/NousResearch/hermes-agent

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
agathos = "agathos.cli:main"
agathos-setup = "agathos.setup:main"
agathos-audit = "agathos.argus_audit:main"

[project.entry-points."hermes.plugins"]
agathos = "agathos.integration:HermesPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/agathos"]

# === UV CONFIGURATION ===
[tool.uv]
python-preference = "only-system"  # Use system Python

[tool.uv.pip]
annotation-style = "line"

# === RUFF CONFIGURATION ===
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

# === MYPY CONFIGURATION ===
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
